[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
envy = "0.4.2"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.31.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["cors"] }
